--- a/public/styles.css
+++ b/public/styles.css
@@ -25,17 +25,31 @@
     padding: 0;
     margin: 0;
 }
-.main-head{
+.main-head {
     font-size: 80px;
     font-family: 'Poppins', serif;
     font-weight: 1100;
     text-align: left;
-    background: radial-gradient(circle, #2fddc3, #ffffff,#ede7de);
-    -webkit-background-clip: text;
-    background-clip: text;
     color: transparent;
-    display: inline-block;
+    background: linear-gradient(to right, #FFF 20%, #2fddc3 40%, #19eacb 60%, #007d6b 80%);
+    background-size: 200% auto;
+    color: #000;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    /* Animation */
+    animation: gradientMotion 7s infinite linear;
 }
+
+@keyframes gradientMotion {
+    0% {
+        background-position: 0% 50%;
+    }
+    100% {
+        background-position: 100% 50%;
+    }
+}
+
 .main-head-three{
     font-size: 30px;
     color: #5bac9f;
@@ -57,14 +71,14 @@
 .content {
     display: flex;
     margin-top: 100px;
+
 }
 .left-fix-content {
-    width: 50%; 
-    padding: 20px;
-    box-sizing: border-box;
     position: fixed;
+    width: 40%;
+    padding: 20px;
     height: 100%;
-    margin-left:40px;
+    z-index: 0;
 }
 
 .left-fix-link{
@@ -72,6 +86,9 @@
     flex-direction: column;
     gap: 20px;
     margin-top: 80px;
+    align-items: center;
+    justify-content: center;
+    padding-right: 280px;
 }
 .left-fix-content-link {
     color: #5bac9f;
@@ -79,7 +96,18 @@
     color: #5bac9f;
     width: 200px;
     height: 30px;
+    font-size: 20px;
     font-family: 'Poppins', serif;
+    border-radius: 20px;
+    transition: color 0.5s ease;
+    transition: font-size 0.7s ease;
+}
+.left-fix-content-link:hover {
+    color: #07ffda;
+    font-size: 30px;
+    transition: font-size 0.7s ease;
+    transition: color 0.5s ease;
+
 }
 
 .handles{
@@ -87,15 +115,21 @@
     gap: 20px;
     text-align: center;
     justify-content: center;
-    padding-right: 475px;
+    padding-right: 420px;
     margin-top: 100px;
 }
 .handles-icon{
     color: #5bac9f;
     font-size: 30px;
+    transform: color font-size 0.5s ease;
 }
-.right-scroll-content {
-    margin-left: 50%; 
+.handles-icon:hover{
+    color: #07ffda;
+    font-size: 40px;
+    transform: color 0.5s ease;
+}
+.right-scroll-content { 
+    margin-left: 50%;
     padding: 20px;
     overflow-y: auto;
 }
@@ -105,6 +139,21 @@
     padding: 20px;
     height: auto;
     width: 90%;
+}
+.my-img-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0px;
+
+}
+.my-img{
+    border-radius: 30px;
+    height: 300px;
+    width: 250px;
+    text-align: center;
+    border: 2px solid #2fddc3;
+    margin-bottom: 20px;
 }
 
 .right-about p{
@@ -234,7 +283,17 @@
     font-family: 'Poppins', serif;
     font-weight: 800;
     text-align: left;
+
 }
 .project-link{
     text-decoration: none;
+}
+.spotlight{
+    background-color: #fff;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    filter: blur(110px);
+    position: relative;
+    z-index: 1;
 }
